fix contrast

--- a/W12/css/small.css
+++ b/W12/css/small.css
@@ -187,7 +187,7 @@ nav ul li.active a {
 }
 
 .spotlights-title {
-   color: white;
+   color: #0c0c22;
    background-color: #D58936;
    font-family: "Lato", Garamond, sans-serif;
    padding: 10px 15px;
@@ -196,7 +196,7 @@ nav ul li.active a {
 }
 
 .events-title {
-   color: white;
+   color: #0c0c22;
    background-color: #D58936;
    font-family: "Lato", Garamond, sans-serif;
    padding: 10px 15px;
@@ -254,7 +254,7 @@ nav ul li.active a {
 }
 
 .contact h4 {
-   color: white;
+   color: #0c0c22;
    font-family: "Lato", Garamond, sans-serif;
    font-size: 24px;
    margin: 0;
@@ -262,7 +262,7 @@ nav ul li.active a {
 }
 
 .contact p {
-   color: white;
+   color: #0c0c22;
    margin: 5px 0;
 }
 
@@ -422,7 +422,7 @@ form label.radio {
 
 .benefits {
    font-family: "Lato", Garamond, sans-serif;
-   color: #FBF3F0;
+   color: #0c0c22;
    background-color: #D58936;
    border: solid 1px #4A5FC1;
    border-radius: 4px;
@@ -577,7 +577,7 @@ form label.radio {
 
 .contact-details {
    font-family: "Merriweather", Arial, serif;
-   color: #FBF3F0;
+   color: #0c0c22;
    background-color: #D58936;
    padding: 20px;
    margin: 20px;
